fixed most worldgen stuff